[package]
name = "gql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.77" }
features = "0.10.0"
futures = "0.3.30"
gitql-ast = { git = "https://github.com/JARAM2024/GQL", package = "gitql-ast" }
gitql-engine = { git = "https://github.com/JARAM2024/GQL", package = "gitql-engine" }
gitql-parser = { git = "https://github.com/JARAM2024/GQL", package = "gitql-parser" }
gix = "0.60.0"
lazy_static = "1.4.0"
pgwire = "0.20.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
